Add basic styles. Making the home page and the game page.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 <body>
 
     
+    <sction class="title-logo">
+        <img src="./Image/logo.png" alt="Game Logo">
+        <h1>Rock, Paper and Scissors</h1>
+    </sction>
+
+    <main class="container">
+        <a href="/game.html">Start</a>
+        <a href="/score">Scores</a>
+    </main>
 
     <script src="./JS/app.js"></script>
     
