Adding JavaScript codes: checking the result of the user's choice with the computer's random result and showing the score results and the text of the win or loss of the user and the computer in that round. And also apply the limit of points up to 5.

--- a/game.html
+++ b/game.html
@@ -16,9 +16,9 @@
 
     <main class="container-box">
         <section class="section-img">
-            <img src="/Image/Rock.png" alt="Rock IMG">
-            <img src="/Image/paper.png" alt="Paper IMG">
-            <img src="/Image/scissors.png" alt="Scissors IMG">
+            <img src="/Image/Rock.png" alt="Rock IMG" data-name="rock">
+            <img src="/Image/paper.png" alt="Paper IMG" data-name="paper">
+            <img src="/Image/scissors.png" alt="Scissors IMG" data-name="scissors">
         </section>
 
         <section class="results">
@@ -28,9 +28,11 @@
         </section>
 
         <section class="msg">
-            <p class="show-message">You Win!</p>
+            <p class="show-message">Select</p>
         </section>
     </main>
+
+    <script src="/JS/app.js"></script>
     
 </body>
 </html>
