Add play again and home buttons and style them with JavaScript handling

--- a/game.html
+++ b/game.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./Style/global.css">
     <link rel="stylesheet" href="./Style/style.css">
 </head>
+
 <body>
 
     <sction class="title-logo">
@@ -22,9 +24,15 @@
         </section>
 
         <section class="results">
-            <span class="cup-result">0</span>
-            <span class="as-result">:</span>
-            <span class="user-result">0</span>
+            <div class="btn-box">
+                <button class="play-again">Palay again</button>
+                <button class="back-home">Home</button>
+            </div>
+            <div class="results-box">
+                <span class="cup-result">0</span>
+                <span class="as-result">:</span>
+                <span class="user-result">0</span>
+            </div>
         </section>
 
         <section class="msg">
@@ -33,6 +41,7 @@
     </main>
 
     <script src="/JS/app.js"></script>
-    
+
 </body>
+
 </html>
