Debug the project

--- a/game.html
+++ b/game.html
@@ -23,6 +23,11 @@
             <img src="/Image/scissors.png" alt="Scissors IMG" data-name="scissors">
         </section>
 
+        <section class="hand-section">
+            <img class="img-user" src="./Image/Rock.png" alt="Rock IMH">
+            <img class="img-computer" src="./Image/Rock.png" alt="Rock IMH">
+        </section>
+
         <section class="results">
             <div class="btn-box">
                 <button class="play-again">Palay again</button>
