Adding the loader as well as the hand box section and styling them.

--- a/game.html
+++ b/game.html
@@ -41,7 +41,8 @@
         </section>
 
         <section class="msg">
-            <p class="show-message">Select</p>
+            <p class="show-message">Let's go</p>
+            <p class="loader"></p>
         </section>
     </main>
 
